--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -8,7 +8,8 @@
 	text-indent: 0;
 }
 
-[epub|type~="z3998:song"] p + p{
+[epub|type~="z3998:song"] p + p,
+[epub|type~="z3998:verse"] p + p{
 	margin-top: 1em;
 }
 
